--- a/Sources/CSearchController.xib
+++ b/Sources/CSearchController.xib
@@ -41,9 +41,6 @@
                     </constraints>
                     <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                     <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="color" keyPath="enabledBackgroundColor">
-                            <color key="value" systemColor="systemBlueColor"/>
-                        </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="color" keyPath="disabledBackgroundColor">
                             <color key="value" systemColor="systemGray4Color"/>
                         </userDefinedRuntimeAttribute>
@@ -70,10 +67,15 @@
             <point key="canvasLocation" x="-151.19999999999999" y="-116.04197901049476"/>
         </view>
     </objects>
+    <designables>
+        <designable name="3Bj-LH-3ie">
+            <size key="intrinsicContentSize" width="30" height="27"/>
+        </designable>
+        <designable name="ePw-VJ-Mkg">
+            <size key="intrinsicContentSize" width="-1" height="51"/>
+        </designable>
+    </designables>
     <resources>
-        <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemGray4Color">
             <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
