--- a/Sources/CSearchController.xib
+++ b/Sources/CSearchController.xib
@@ -29,7 +29,7 @@
                     </constraints>
                     <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                     <connections>
-                        <outlet property="delegate" destination="-1" id="bfz-vr-AB2"/>
+                        <outlet property="delegate" destination="-1" id="545-WL-lzZ"/>
                     </connections>
                 </searchBar>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Bj-LH-3ie" customClass="CButton" customModule="CustomSearchController">
