--- a/CustomSearchControllerDemo/CustomSearchControllerDemo/Base.lproj/Main.storyboard
+++ b/CustomSearchControllerDemo/CustomSearchControllerDemo/Base.lproj/Main.storyboard
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="erL-ma-3br">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -7,16 +8,16 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Movies-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CustomSearchControllerDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yal-iT-owR" customClass="CSearchController" customModule="CustomSearchController">
-                                <rect key="frame" x="10" y="0.0" width="580" height="56"/>
+                                <rect key="frame" x="10" y="140" width="394" height="56"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="56" id="y2M-He-wax"/>
@@ -24,21 +25,70 @@
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="shouldShowButton" value="YES"/>
                                     <userDefinedRuntimeAttribute type="string" keyPath="titleLabel" value="Add"/>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isTextDidChangeActive" value="YES"/>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="vJH-PA-Y7B"/>
+                                </connections>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Wa2-x4-RaZ">
+                                <rect key="frame" x="0.0" y="196" width="414" height="666"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="XxV-q7-kg7">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XxV-q7-kg7" id="o97-EV-Pj0">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="d3N-Hp-emm"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Xxe-ib-IRe"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Wa2-x4-RaZ" secondAttribute="trailing" id="G7H-KA-F1E"/>
                             <constraint firstItem="Yal-iT-owR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="JnR-kj-JR4"/>
                             <constraint firstItem="Yal-iT-owR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="RmO-qg-s7g"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Yal-iT-owR" secondAttribute="trailing" constant="10" id="Sbx-Ty-Z5i"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Wa2-x4-RaZ" secondAttribute="bottom" id="eHv-t8-PAe"/>
+                            <constraint firstItem="Wa2-x4-RaZ" firstAttribute="top" secondItem="Yal-iT-owR" secondAttribute="bottom" id="wRI-RG-dYn"/>
+                            <constraint firstItem="Wa2-x4-RaZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="yyb-XH-rkp"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Movies" id="LlB-Dv-zl1"/>
+                    <connections>
+                        <outlet property="cSearchController" destination="Yal-iT-owR" id="vaf-wW-GTq"/>
+                        <outlet property="tableView" destination="Wa2-x4-RaZ" id="aBo-sP-BOz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="30" y="47"/>
+            <point key="canvasLocation" x="939.13043478260875" y="46.875"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="iJZ-9k-jfI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="erL-ma-3br" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="grm-83-cdg">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="GRd-yc-UpI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zR7-GW-72V" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="28.985507246376812" y="46.875"/>
         </scene>
     </scenes>
     <resources>
