--- a/CustomSearchControllerDemo/CustomSearchControllerDemo/Base.lproj/Main.storyboard
+++ b/CustomSearchControllerDemo/CustomSearchControllerDemo/Base.lproj/Main.storyboard
@@ -35,13 +35,39 @@
                                 <rect key="frame" x="0.0" y="196" width="414" height="666"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="XxV-q7-kg7">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="XxV-q7-kg7" customClass="TableViewCell" customModule="CustomSearchControllerDemo" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="68"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XxV-q7-kg7" id="o97-EV-Pj0">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="68"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kE1-sj-5ib">
+                                                    <rect key="frame" x="20" y="16" width="374" height="17"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ruT-sN-E07">
+                                                    <rect key="frame" x="20" y="37" width="374" height="15"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                    <color key="textColor" systemColor="secondaryLabelColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="ruT-sN-E07" secondAttribute="trailing" constant="20" id="0Pz-9Y-Ksx"/>
+                                                <constraint firstItem="kE1-sj-5ib" firstAttribute="top" secondItem="o97-EV-Pj0" secondAttribute="top" constant="16" id="9TN-2K-VgM"/>
+                                                <constraint firstAttribute="trailing" secondItem="kE1-sj-5ib" secondAttribute="trailing" constant="20" id="AEo-8W-3uh"/>
+                                                <constraint firstItem="ruT-sN-E07" firstAttribute="top" secondItem="kE1-sj-5ib" secondAttribute="bottom" constant="4" id="AQw-bZ-wmc"/>
+                                                <constraint firstAttribute="bottom" secondItem="ruT-sN-E07" secondAttribute="bottom" constant="16" id="U7Z-x9-hMB"/>
+                                                <constraint firstItem="ruT-sN-E07" firstAttribute="leading" secondItem="o97-EV-Pj0" secondAttribute="leading" constant="20" id="iyY-P9-6a9"/>
+                                                <constraint firstItem="kE1-sj-5ib" firstAttribute="leading" secondItem="o97-EV-Pj0" secondAttribute="leading" constant="20" id="pwt-kf-c7G"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="movieName" destination="kE1-sj-5ib" id="b9J-TE-v2u"/>
+                                            <outlet property="releaseYear" destination="ruT-sN-E07" id="A4P-zy-sKD"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -92,6 +118,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
